@@ -649,6 +649,7 @@ shell_escape = p
 % 
 shell_escape_commands = \
 bibtex,bibtex8,\
+extractbb,\
 gregorio,\
 kpsewhich,\
 l3sys-query,\
@@ -660,7 +661,6 @@ r-mpost,\
 texosquery-jre8,\
 
 % other programs considered:
-% extractbb - allowed in the past, but can be exploited.
 % dvips - but external commands can be executed, need at least -R1.
 % epspdf, ps2pdf, pstopdf - need to respect openout_any,
 %   and gs -dSAFER must be used and check for shell injection with filenames.
